--- a/YouShare_vs1/pom.xml
+++ b/YouShare_vs1/pom.xml
@@ -22,6 +22,13 @@
   		<artifactId>logback-classic</artifactId>
   		<version>1.2.3</version>
   	</dependency>
+  	
+  	<dependency>
+  		<groupId>com.vdurmont</groupId>
+  		<artifactId>emoji-java</artifactId>
+  		<version>3.1.3</version>
+  	</dependency>
+  	
     </dependencies>
   
 </project>
