--- a/YouShare_vs1/.classpath
+++ b/YouShare_vs1/.classpath
@@ -35,5 +35,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-15.0.2"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
