--- a/YouShare_vs1/.classpath
+++ b/YouShare_vs1/.classpath
@@ -30,5 +30,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-15.0.2"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
